--- a/MyWebSite2/index.j2
+++ b/MyWebSite2/index.j2
@@ -2,13 +2,20 @@
 <html>
 <body bgcolor="#35363A">
 
-<h1>Hello WebSite2</h1>
+<h1>Hello WebSite generated with Jinja</h1>
 
 <img src="au.png" width="48" height="24">
 <img src="de.png" width="48" height="24">
 <br>
 <img src="fr.png" width="48" height="24">
 <img src="gb.png" width="48" height="24">
+<br>
+<br>
+Server Hostname is: {{ ansible_hostname }}
+<br>
+Server host IP is : {{ ansible_default_ipv4.address }}
+<br>
+Server OS Family is: {{ ansible_os_family }}
 
 </body>
 </html>
