--- a/roles/deploy_apache_web/templates/index.j2
+++ b/roles/deploy_apache_web/templates/index.j2
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body bgcolor="#35363A">
 
-<h1>Hello  from index4 by Jinja</h1>
-<br>
+<h1>Hello WebSite generated with Jinja 2</h1>
 
-<font color="gold">Owher of this Server is: {{ owner }}
+<img src="au.png" width="48" height="24">
+<img src="de.png" width="48" height="24">
 <br>
-Server Host Name: {{ ansible_hostname }}
+<img src="fr.png" width="48" height="24">
+<img src="gb.png" width="48" height="24">
+<br>
+<br>
+Server Hostname is: {{ ansible_hostname }}
+<br>
+Server host IP is : {{ ansible_default_ipv4.address }}
 <br>
 Server OS Family is: {{ ansible_os_family }}
-<br>
-IP Address of this Server is: {{ ansible_default_ipv4.Address }}
-<br>
 
 </body>
 </html>
