--- a/roles/00-prepare-vm/templates/ntp/ntp.conf.j2
+++ b/roles/00-prepare-vm/templates/ntp/ntp.conf.j2
@@ -18,7 +18,12 @@ filegen clockstats file clockstats type day enable
 # Use servers from the NTP Pool Project. Approved by Ubuntu Technical Board
 # on 2011-02-08 (LP: #104525). See http://www.pool.ntp.org/join.html for
 # more information.
-pool 192.168.2.58 prefer iburst
+
+{% for ntp in ntp_servers %}
+pool {{ ntp }} {% if ntp == ntp_servers[0] %}prefer iburst
+{% else %}iburst
+{% endif %}
+{% endfor %}
 
 # Use Ubuntu's ntp server as a fallback.
 pool ntp.ubuntu.com
