--- a/roles/02-High-Availability/templates/keepalived.j2
+++ b/roles/02-High-Availability/templates/keepalived.j2
@@ -5,21 +5,22 @@ vrrp_script chk_haproxy {
 }
 
 vrrp_instance VI_1 {
-  interface {{ ansible_facts.default_ipv4.interface }} # interface to monitor
-{% if inventory_hostname == groups['k8s_alma_masters'][0] %}
+  interface {{ ansible_facts.default_ipv4.interface }}             # interface to monitor
+{% if inventory_hostname == groups['k8s_masters'][0] %}
   state MASTER                # MASTER on master, BACKUP on slaves
 {% else %}
   state BACKUP                # MASTER on master, BACKUP on slaves
 {% endif %}
+
   virtual_router_id 51
-{% if inventory_hostname == groups['k8s_alma_masters'][0] %}
+{% if inventory_hostname == groups['k8s_masters'][0] %}
   priority 101                # 101 on master, 100 on slaves
 {% else %}
   priority 100                # 101 on master, 100 on slaves
 {% endif %}
 
   virtual_ipaddress {
-    {{ ha_cluster_virtual_ip }}/24          # virtual ip address
+    {{ cluster_control_plane_vip }}/24          # virtual ip address
   }
 
   track_script {
