--- a/roles/chrony/templates/chrony-oracle.conf.j2
+++ b/roles/chrony/templates/chrony-oracle.conf.j2
@@ -1,9 +1,7 @@
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (https://www.pool.ntp.org/join.html).
-#pool 2.almalinux.pool.ntp.org iburst
-
-{% for ntp in ntp_servers %}
-server {{ ntp }} {% if ntp == ntp_servers[0] %}prefer iburst
+{% for ntp in chrony_ntp_servers %}
+server {{ ntp }} {% if ntp == chrony_ntp_servers[0] %}prefer iburst
 {% else %}iburst
 {% endif %}
 {% endfor %}
