--- a/roles/dns/templates/resolved.conf.j2
+++ b/roles/dns/templates/resolved.conf.j2
@@ -20,11 +20,11 @@
 # Google:     8.8.8.8#dns.google 8.8.4.4#dns.google 2001:4860:4860::8888#dns.google 2001:4860:4860::8844#dns.google
 # Quad9:      9.9.9.9#dns.quad9.net 149.112.112.112#dns.quad9.net 2620:fe::fe#dns.quad9.net 2620:fe::9#dns.quad9.net
 
-DNS={% for ip in dns_nameservers %} {{ip}} {% endfor %}
+DNS={% for ip in dns_servers %} {{ip}} {% endfor %}
 
 #FallbackDNS=
 
-Domains={{ dns_my_domen }}
+Domains={{ domen }}
 
 #DNSSEC=no
 #DNSOverTLS=no
