Refactor zookeeper.service.j2 template: replace hardcoded username with variable for improved configurability.

--- a/roles/install-kafka-zookeeper/templates/zookeeper.service.j2
+++ b/roles/install-kafka-zookeeper/templates/zookeeper.service.j2
@@ -5,7 +5,7 @@ After=network.target remote-fs.target
 
 [Service]
 Type=simple
-User=kafka
+User={{ kafka_username }}
 ExecStart={{ kafka_folder }}/bin/zookeeper-server-start.sh {{ kafka_folder }}/config/zookeeper.properties
 ExecStop={{ kafka_folder }}/bin/zookeeper-server-stop.sh
 ExecReload=/bin/kill -HUP $MAINPID
