--- a/roles/install-kafka-zookeeper/templates/server.properties.j2
+++ b/roles/install-kafka-zookeeper/templates/server.properties.j2
@@ -102,8 +102,10 @@ log.retention.check.interval.ms=300000
 # You can also append an optional chroot string to the urls to specify the
 # root directory for all kafka znodes.
 #zookeeper.connect=localhost:2181
+# Example
 #zookeeper.connect=kafka-zoo-1:2181,kafka-zoo-2:2181,kafka-zoo-3:2181
-zookeeper.connect={% for host in groups['kafka_zoo'] %}{{ host }}:2181{% if not loop.last %},{% endif %}{% endfor %}
+# Example
+zookeeper.connect={% for host in groups[kafka_inventory_group_name] %}{{ hostvars[host].ansible_hostname }}:2181{% if not loop.last %},{% endif %}{% endfor %}
 
 # Timeout in ms for connecting to zookeeper
 zookeeper.connection.timeout.ms=18000
