--- a/roles/install-kafka-zookeeper/templates/zookeeper.properties.j2
+++ b/roles/install-kafka-zookeeper/templates/zookeeper.properties.j2
@@ -7,6 +7,11 @@ clientPort=2181
 maxClientCnxns=0
 admin.enableServer=true
 admin.serverPort=8080
-{% for host in groups['kafka_zoo'] %}
+# Example
+#server.1=192.168.2.161:2888:3888
+#server.2=192.168.2.162:2888:3888
+#server.3=192.168.2.163:2888:3888
+# Example
+{% for host in groups[kafka_inventory_group_name] %}
 server.{{ hostvars[host].zoo_id }}={{ hostvars[host].ansible_host }}:2888:3888
 {% endfor %}
