Update Backup role

--- a/roles/install-alloy/templates/alloy-configs/metrics-mimir.alloy.j2
+++ b/roles/install-alloy/templates/alloy-configs/metrics-mimir.alloy.j2
@@ -8,6 +8,12 @@ prometheus.remote_write "mimir" {
 		app = "angie",
 	}
 
+  	external_labels = {
+{% for k in external_labels %}
+    	{{ "%-10s"|format(k) }} = "{{ external_labels[k] }}",
+{% endfor %}
+  	}
+
 	endpoint {
 		url     = "https://mimir.fillswim.local/api/v1/push"
 		headers = {
