Update Install Alloy role

--- a/roles/install-alloy/templates/alloy-configs/metrics-kafka.alloy.j2
+++ b/roles/install-alloy/templates/alloy-configs/metrics-kafka.alloy.j2
@@ -3,7 +3,7 @@
 // ===================================================
 
 prometheus.exporter.kafka "kafka_metrics" {
-	kafka_uris = ["kafka-zoo-1:9092"]
+	kafka_uris = ["{{ ansible_facts.hostname }}:9092"]
 }
 
 prometheus.scrape "kafka_scrape" {
