--- a/roles/install-alloy/templates/alloy-configs/logs-kafka.alloy.j2
+++ b/roles/install-alloy/templates/alloy-configs/logs-kafka.alloy.j2
@@ -5,7 +5,7 @@
 local.file_match "kafka_logs" {
 	path_targets = [
 		{
-			"__path__" = "/var/log/kafka/*.log",
+			"__path__" = "{{ kafka_logs_folder }}/*.log",
 		},
 	]
 }
