--- a/roles/install-alloy/templates/alloy-configs/logs-zookeeper.alloy.j2
+++ b/roles/install-alloy/templates/alloy-configs/logs-zookeeper.alloy.j2
@@ -5,7 +5,7 @@
 local.file_match "zookeeper_logs" {
 	path_targets = [
 		{
-			"__path__" = "/var/log/zookeeper/*.log",
+			"__path__" = "{{ zookeeper_logs_folder }}/*.log",
 		},
 	]
 }
